--- a/src/styles/MainContainer.css
+++ b/src/styles/MainContainer.css
@@ -143,6 +143,190 @@
 }
 
 .banner .content .artist .right a:hover{
-    box-shadow:5px 10px 20px rgba(0,0,0,0.4);
+    box-shadow:0px 0px 20px rgba(0,0,0,0.4);
 }
+
+.menuList{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 15px 25px;
+    background: #2c2c2c;
+}
+
+.menuList ul{
+    display: flex;
+    align-items: center;
+
+}
+.menuList ul li{
+    list-style: none;
+    margin: 0 20px;
+    position: relative;
+}
+
+.menuList ul li a{
+    text-decoration: none;
+    color: #848484;
+    font-size: 14px ;
+    font-weight: bold;
+}
+.menuList ul li:before{
+    position: absolute;
+    content: "";
+    bottom:-20px;
+    left: 10px;
+    width: 0px;
+    height: 5px;
+    border-radius: 5px;
+    background: #f1f1f1;
+
+}
+
+.menuList ul li:hover::before,
+.menuList ul li.active::before{
+    width: 30px;
+    transition: width 0.6s cubic-bezier(0.175,0.885,0.32,1.275);
+}
+
+.menuList ul li:hover a,
+.menuList ul li.active a{
+    color: #f1f1f1;
+    transition: 0.6s;
+
+}
+
+.menuList p{
+    color: #f1f1f1;
+    font-size: 14px;
+
+}
+
+.menuList p i{
+    margin-right: 6px;
+    font-size: 12px;
+
+}
+
+.menuList p span{
+    font-size: 12px;
+    text-align: center;
+    color: #848484;
+    margin-left: 6px;
+}
+
+
+/* Main Audio list styles */
+.audioList{
+    padding: 10px 30px;
+
+}
+
+.audioList .title{
+    font-size: 18px;
+    color: #f1f1f1;
+}
+.audioList .title span{
+    color: #848484;
+    margin-left: 5px;
+    font-size: 12px;
+
+}
+
+.songsContainer{
+    height: 320px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+
+}
+
+.songs{
+    display: flex;
+    align-items: center;
+    font-size: 14px;
+    font-weight: 600;
+    color: #848484;
+    width: 100%;
+    margin: 10px 0;
+    padding: 5px;
+}
+
+.songs:hover, 
+.songs.active{
+    color: #f1f1f1;
+    transition: 0.6s;
+} 
+
+.count{
+    margin: 10px;
+}
+
+.song{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    border-bottom: 1px solid rgba(225, 225, 225, 0.1);
+    padding-bottom: 5px;
+    cursor: pointer;
+}
+
+.song .imgBox{
+    width: 45px;
+    height: 45px;
+    min-width: 45px;
+    min-height: 45px;
+    border-radius: 0.5em;
+    background: #555;
+    margin-right: 10px;
+    overflow: hidden;
+
+}
+
+.song .imgBox img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.song .section{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.song .section .songName{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 50%;
+}
+
+.song .section .hits{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.song .section .hits .hit,
+.song .section .hits .duration{
+    margin-right: 15px;
+
+}
+
+.song .section .hits .hit i,
+.song .section .hits .duration i{
+    font-size: 12px;
+    margin-right: 5px;
+}
+
+
+.song .section .hits .favourite i{
+    color: #49e12e;
+    filter: drop-shadow(0px 0px 4px #49e12e);
+}
+
+
+
+
 
