--- a/src/styles/MusicPlayer.css
+++ b/src/styles/MusicPlayer.css
@@ -93,6 +93,7 @@
     border-radius: 10px;
     background: rgba(255,255,255,0.1);
     cursor: pointer;
+    overflow: hidden;
 }
 /* chrome and safari */
 .songAttributes .bottom .progresBar:before{
@@ -101,7 +102,7 @@
     top: 0;
     left: 0;
     background: #848484;
-    width: 50%;
+    width: var(--player-played);
     height: 100%;
     border-radius: 10px;
     z-index: 2;
@@ -134,7 +135,7 @@
     top: 0;
     left: 0;
     background: #848484;
-    width: 50%;
+    width: var(--player-played);
     height: 100%;
     border-radius: 10px;
     z-index: 2;
@@ -155,4 +156,25 @@
     color: #f1f1f1;
     font-size: 12px;
     font-weight: bold;
+}
+
+@media screen and (max-width:550px){
+    .songImage{
+        width: 100px;
+        min-width: 100px;
+    }
+
+    .songAttributes .top .left i,
+     .songAttributes .top .middle i,
+      .songAttributes .top .right i{
+        margin: 0 5px;
+    }
+    
+    .songAttributes .bottom{
+        padding: unset;
+    }
+
+    .songAttributes .bottom .progresBar{
+        width: 65%;
+    }
 }
